Updated pom.xml and OTP scenario